--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - 3001:3001
   DB:
-    image: mysql:8.0-oracle
+    image: arm64v8/mysql:8.0-oracle
     restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=123456
